...
        }
    }

    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("MainScreen")
            .focusRequester(focusRequester)
            .focusable()
            .onKeyEvent { event ->
                if (event.type == KeyEventType.KeyDown) {
                    when (event.key) {
                        Key.MediaNext, Key.DirectionUp -> {
...
            .combinedClickable(
                onClick = { },
                onLongClick = onLongClick
            )
            .padding(vertical = Rn2Theme.dimensions.paddingTiny)
            .padding(horizontal = Rn2Theme.dimensions.paddingSmall)
            .testTag("PartialOdometer"),
        contentAlignment = Alignment.CenterEnd
    ) {
        Text(
            text = distance,
            modifier = Modifier.testTag("PartialOdometerValue"),
            style = MaterialTheme.typography.displayLarge.copy(
                fontWeight = FontWeight.Bold
            ),
            color = MaterialTheme.colorScheme.onPrimary,
            maxLines = 1,
            softWrap = false
...
    ) {
        when (state) {
            is RoadbookUiState.Loading -> {
                CircularProgressIndicator(
                    modifier = Modifier
                        .align(Alignment.Center)
                        .testTag("LoadingIndicator")
                )
            }
            is RoadbookUiState.Empty -> {
                Text(
                    text = stringResource(R.string.main_no_route),
                    modifier = Modifier.align(Alignment.Center),
...
                    color = MaterialTheme.colorScheme.error,
                    modifier = Modifier.align(Alignment.Center),
                    style = MaterialTheme.typography.titleMedium
                )
            }
            is RoadbookUiState.Success -> {
                RoadbookList(
                    waypoints = state.route.waypoints,
                    listState = listState,
                    onSetPartialClick = onSetPartialClick,
                    onWaypointVisible = onWaypointVisible
                )
            }
...
